crates/core/tests/ui/from_xml/union_not_supported.rs
#[derive(ximple::FromXml)]
union Foo {
    foo: usize,
}

fn main() {}
